--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 * {
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+.font-poppins {
+  font-family: 'Poppins', sans-serif;
 }
 html,
 body {
