--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html,
 body {
   margin: 0;
   padding: 0;
+  background-image : url("https://img.freepik.com/free-photo/arrangement-black-friday-shopping-carts-with-copy-space_23-2148667047.jpg?t=st=1696426149~exp=1696426749~hmac=b6c6e648b3a16a230c8db3af58f2e3275dbb6b8251aa62754e270c62bd1c7c35");
+  
 }
 .app-container {
   max-width: 400px;
@@ -12,6 +14,7 @@ body {
   min-height: 100vh;
   border: 1px solid black;
   padding: 0.5rem;
+  background-color: rgb(204, 204, 204);
 }
 
 .app-container > form > .form-control {
@@ -25,6 +28,23 @@ body {
   width: 100%;
 }
 
+#result {
+  background-color: rgb(165, 162, 162);
+}
+
 #result p {
-  color: brown;
+  color: rgb(131, 13, 13);
+}
+
+#result h6 {
+  text-decoration: underline;
+}
+
+#total-text{
+  font-weight: bold;
+  color: rgb(131, 13, 13);
+}
+
+#subtotal-text {
+  color: rgb(131, 13, 13);
 }
