--- a/style.css
+++ b/style.css
@@ -1,82 +1,45 @@
-* {
-  box-sizing: border-box;
-}
-
-h1 {
-  text-align: center;
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-  background-color: rgb(210, 234, 255);
-}
-
-.app-container {
-  background-color: white;
-  max-width: 400px;
-  margin: 25px auto;
-  min-height: 100vh;
-  border-radius: 5px;
-  padding: 20px;
-  -webkit-box-shadow: 0px 0px 150px 5px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0px 0px 150px 5px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 150px 5px rgba(0, 0, 0, 0.1);
-}
-
-.app-container>form>.form-control {
-  width: 100%;
-  border: 0;
-}
-
-#form-cart {}
-
-.app-container>form>.form-control>label {
-  display: block;
-}
-
 .form-control input {
   display: block;
   width: 100%;
 }
 
-
-.ton {
-  padding: 20px 0;
-  display: flex;
-  width: 100%;
-  justify-content: center;
+.app-container {
+  max-width: 600px;
+  padding: 20px;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  background-color: #f7f7f7;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .form-control {
-  border: none;
-  background-color: red;
+  margin-bottom: 10px;
+  text-align: left;
+}
 
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 button {
-  width: 200px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.result-box {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.result-box-item {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 1rem;
-}
-
-.result-box-item>div {
-  font-size: 1.1rem;
-  font-weight: bold;
-}
-
-#total-text-div {
-  margin-top: 0rem !important;
+button:hover {
+  background-color: #258cd1;
 }
